--- a/book-table.html
+++ b/book-table.html
@@ -168,214 +168,102 @@
     <!-- **********Publication********* -->
 
     <div class="container">
+        <h3 style="text-align: center; padding: 15px;">Book Your Desire Tabe</h3>
         <div class="row">
             <div class="col-sm-3">
-                <h5 class="txt-9">Top Rating books</h5>
-                <ul style="list-style-type: none;">
-                    <li>
-                        <input type="checkbox" name="Rating" id="Rating" style="margin-top: 4px;"> <span
-                            style="margin: 5px;">4.5* above</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="Rating" id="Rating" style="margin-top: 4px;"> <span
-                            style="margin: 5px;">4.5* above</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="Rating" id="Rating" style="margin-top: 4px;"> <span
-                            style="margin: 5px;">4.5* above</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="Rating" id="Rating" style="margin-top: 4px;"> <span
-                            style="margin: 5px;">4.5* above</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="Rating" id="Rating" style="margin-top: 4px;"> <span
-                            style="margin: 5px;">4.5* above</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="Rating" id="Rating" style="margin-top: 4px;"> <span
-                            style="margin: 5px;">4.5* above</span>
-                    </li>
-                </ul>
-
-                <h5 class="txt-10">Age</h5>
-                <ul style="list-style-type: none;">
-                    <li>
-                        <input type="checkbox" name="Rating" id="Rating" style="margin-top: 4px;"> <span
-                            style="margin: 5px;">Baby ( 5-12 )</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="Rating" id="Rating" style="margin-top: 4px;"> <span
-                            style="margin: 5px;">Baby ( 5-12 )</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="Rating" id="Rating" style="margin-top: 4px;"> <span
-                            style="margin: 5px;">Baby ( 5-12 )</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="Rating" id="Rating" style="margin-top: 4px;"> <span
-                            style="margin: 5px;">Baby ( 5-12 )</span>
-                    </li>
-                </ul>
-
-                <h5 class="txt-10">New Publication</h5>
-                <ul style="list-style-type: none;">
-                    <li>
-                        <input type="checkbox" name="Rating" id="Rating" style="margin-top: 4px;"> <span
-                            style="margin: 5px;">2021 ( 21 )</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="Rating" id="Rating" style="margin-top: 4px;"> <span
-                            style="margin: 5px;">2021 ( 21 )</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="Rating" id="Rating" style="margin-top: 4px;"> <span
-                            style="margin: 5px;">2021 ( 21 )</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="Rating" id="Rating" style="margin-top: 4px;"> <span
-                            style="margin: 5px;">2021 ( 21 )</span>
-                    </li>
-
-                </ul>
-                <h5 class="txt-10">Academic Books</h5>
-                <select name="cars" style="width: 100%;height: 40px; margin-bottom: 20px;">
-                    <option value="class">Select Your Class</option>
-                    <option value="one">xi</option>
-                    <option value="two">xii</option>
-                    <option value="three">xii</option>
-                </select>
-
-                <h5 class="txt-10"> List of Book Genres</h5>
-                <select name="cars" style="width: 100%;height: 40px;margin-bottom: 20px;">
-                    <option value="class">Select Your Class</option>
-                    <option value="one">xi</option>
-                    <option value="two">xii</option>
-                    <option value="three">xii</option>
-                </select>
-
-                <h5 class="txt-10">Authors</h5>
-                <select name="cars" style="width: 100%;height: 40px;margin-bottom: 20px;">
-                    <option value="class">Select Your Class</option>
-                    <option value="one">xi</option>
-                    <option value="two">xii</option>
-                    <option value="three">xii</option>
-                </select>
+                <img style="height: 300px; width: 100%;" src="img/lib2.jpg" alt="">
             </div>
             <div class="col-sm-9">
                 <div class="row">
                                     <!-- The Modal -->
+                <div class="modal fade" id="myModal">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                            <h6 style="text-align: center; padding: 10px;">Confirm Your Table</h6>
 
+                            <div class="container" style="padding: 30px;">
+                                <form class="shake" role="form" method="post" id="contactForm" name="contact-form" data-toggle="validator">
+                                  <!-- Name -->
+                                  <div class="form-group label-floating">
+                                    <label class="control-label" for="name">Name</label>
+                                    <input class="form-control" id="name" type="text" name="name" required
+                                      data-error="Please enter your name">
+                                    <div class="help-block with-errors"></div>
+                                  </div>
+                                  <!-- email -->
+                                  <div class="form-group label-floating">
+                                    <label for="email">Email:</label>
+                                    <input class="form-control" id="email" type="email" name="email" required
+                                      data-error="Please enter your Email">
+                                    <div class="help-block with-errors"></div>
+                                  </div>
+                      
+                                  <!-- Date -->
+                                  <div class="form-group label-floating">
+                                    <form action="/action_page.php">
+                                        <label for="date">Date:</label>
+                                        <input type="date">
+                                      </form>
+                                  </div>
+                                  <!-- Time -->
+                                  <div class="form-group label-floating">
+                                    <form action="/action_page.php">
+                                        <label for="appt">Select a time:</label>
+                                        <input type="time" id="appt" name="appt">
+                                      </form>
+                                  </div>
+
+                                  <!-- Form Submit -->
+                                  <div class="form-submit mt-5">
+                                    <button class="btn btn-common" type="submit" id="form-submit"
+                                      style="background-color: rgb(219, 82, 58); border: 3px;color: white;"><i
+                                        class="material-icons mdi mdi-message-outline"></i> Send Message</button> <br> <br>
+                                    <div id="msgSubmit" class="h3 text-center hidden"></div>
+                                    <div class="clearfix"></div>
+                                  </div>
+                                </form>
+                              </div>
+
+                        </div>
+                    </div>
+                </div>
                  <!-- The Modal -->
 
                     <div class="card col-sm-3" style="padding:10px">
                         <div class="card-block">
-                            <img class="img-27" src="img/book.jpg">
-                            <p class="card-text" style="padding: 10px;">Newtos theorem </p>
+                            <img class="img-27" src="img/lib.jpg">
+                            <p class="card-text" style="padding: 10px; text-align: center;">Book Table</p>
                         </div>
                         <button class="modal-btn2" type="button" data-toggle="modal" data-target="#myModal">
-                            <a style="text-decoration: none; color: white;" href="book-details.html">Show details</a>
+                            Show details
                         </button>
                     </div>
 
                     <div class="card col-sm-3" style="padding:10px">
                         <div class="card-block" >
-                            <img class="img-27" src="img/book.jpg">
-                            <p class="card-text" style="padding: 10px;">Newtos theorem </p>
+                            <img class="img-27" src="img/lib.jpg">
+                            <p class="card-text" style="padding: 10px; text-align: center;">Book Table</p>
                         </div>
                         <button class="modal-btn2" type="button" data-toggle="modal" data-target="#myModal">
-                            <a style="text-decoration: none; color: white;" href="book-details.html">Show details</a>
+                            Show details
                         </button>
                     </div>
                     <div class="card col-sm-3" style="padding:10px">
                         <div class="card-block">
-                            <img class="img-27" src="img/book.jpg">
-                            <p class="card-text" style="padding: 10px;">Newtos theorem </p>
+                            <img class="img-27" src="img/lib.jpg">
+                            <p class="card-text" style="padding: 10px; text-align: center;">Book Table</p>
                         </div>
                         <button class="modal-btn2" type="button" data-toggle="modal" data-target="#myModal">
-                            <a style="text-decoration: none; color: white;" href="book-details.html">Show details</a>
+                            Show details
                         </button>
                     </div>
                     <div class="card col-sm-3" style="padding:10px">
                         <div class="card-block">
-                            <img class="img-27" src="img/book.jpg">
-                            <p class="card-text" style="padding: 10px;">Newtos theorem </p>
+                            <img class="img-27" src="img/lib.jpg">
+                            <p class="card-text" style="padding: 10px; text-align: center;">Book Table</p>
                         </div>
                         <button class="modal-btn2" type="button" data-toggle="modal" data-target="#myModal">
-                            <a style="text-decoration: none; color: white;" href="book-details.html">Show details</a>
-                        </button>
-                    </div>
-                    <div class="card col-sm-3" style="padding:10px">
-                        <div class="card-block">
-                            <img class="img-27" src="img/book.jpg">
-                            <p class="card-text" style="padding: 10px;">Newtos theorem </p>
-                        </div>
-                        <button class="modal-btn2" type="button" data-toggle="modal" data-target="#myModal">
-                            <a style="text-decoration: none; color: white;" href="book-details.html">Show details</a>
-                        </button>
-                    </div>
-                    <div class="card col-sm-3" style="padding:10px">
-                        <div class="card-block">
-                            <img class="img-27" src="img/book.jpg">
-                            <p class="card-text" style="padding: 10px;">Newtos theorem </p>
-                        </div>
-                        <button class="modal-btn2" type="button" data-toggle="modal" data-target="#myModal">
-                            <a style="text-decoration: none; color: white;" href="book-details.html">Show details</a>
-                        </button>
-                    </div>
-                    <div class="card col-sm-3" style="padding:10px">
-                        <div class="card-block">
-                            <img class="img-27" src="img/book.jpg">
-                            <p class="card-text" style="padding: 10px;">Newtos theorem </p>
-                        </div>
-                        <button class="modal-btn2" type="button" data-toggle="modal" data-target="#myModal">
-                            <a style="text-decoration: none; color: white;" href="book-details.html">Show details</a>
-                        </button>
-                    </div>
-                    <div class="card col-sm-3" style="padding:10px">
-                        <div class="card-block">
-                            <img class="img-27" src="img/book.jpg">
-                            <p class="card-text" style="padding: 10px;">Newtos theorem </p>
-                        </div>
-                        <button class="modal-btn2" type="button" data-toggle="modal" data-target="#myModal">
-                            <a style="text-decoration: none; color: white;" href="book-details.html">Show details</a>
-                        </button>
-                    </div>
-
-                    <div class="card col-sm-3" style="padding:10px">
-                        <div class="card-block">
-                            <img class="img-27" src="img/book.jpg">
-                            <p class="card-text" style="padding: 10px;">Newtos theorem </p>
-                        </div>
-                        <button class="modal-btn2" type="button" data-toggle="modal" data-target="#myModal">
-                            <a style="text-decoration: none; color: white;" href="book-details.html">Show details</a>
-                        </button>
-                    </div>
-                    <div class="card col-sm-3" style="padding:10px">
-                        <div class="card-block">
-                            <img class="img-27" src="img/book.jpg">
-                            <p class="card-text" style="padding: 10px;">Newtos theorem </p>
-                        </div>
-                        <button class="modal-btn2" type="button" data-toggle="modal" data-target="#myModal">
-                            <a style="text-decoration: none; color: white;" href="book-details.html">Show details</a>
-                        </button>
-                    </div>
-                    <div class="card col-sm-3" style="padding:10px">
-                        <div class="card-block">
-                            <img class="img-27" src="img/book.jpg">
-                            <p class="card-text" style="padding: 10px;">Newtos theorem </p>
-                        </div>
-                        <button class="modal-btn2" type="button" data-toggle="modal" data-target="#myModal">
-                            <a style="text-decoration: none; color: white;" href="book-details.html">Show details</a>
-                        </button>
-                    </div>
-                    <div class="card col-sm-3" style="padding:10px">
-                        <div class="card-block">
-                            <img class="img-27" src="img/book.jpg">
-                            <p class="card-text" style="padding: 10px;">Newtos theorem </p>
-                        </div>
-                        <button class="modal-btn2" type="button" data-toggle="modal" data-target="#myModal">
-                            <a style="text-decoration: none; color: white;" href="book-details.html">Show details</a>
+                            Show details
                         </button>
                     </div>
  
